<resources>
    <string name="app_name">Friends Quizz</string>
    <string name="category">Elige tu dinámica</string>
    <string name="whois">Quién es... Grupal</string>
    <string name="deep">Profundas</string>
    <string name="next">Generar</string>
    <string name="met">Presentación</string>
    <string name="plus">¿Cuanto me conocen?</string>
    <string name="random">Random</string>
    <string name="lines">¿A quien eligirias para...?</string>
    <string name="add_question">Nueva Pregunta</string>
    <string name="save">Guardar</string>
    <string name="ifyou">Y si...?</string>
    <string name="challengeTitle">Reto Diario</string>
    <string name="whoisQuestion">whoisQuestion</string>
    <string name="deepQuestion">deepQuestion</string>
    <string name="metQuestion">metQuestion</string>
    <string name="knowQuestion">knowQuestion</string>
    <string name="linesQuestion">linesQuestion</string>
    <string name="debateQuestion">debateQuestion</string>
    <string name="ifYouQuestion">selectQuestion</string>
    <string name="debate">Temas de discusión</string>
    <string name="select">Elecciones</string>
    <string name="selectQuestion">selectQuestions</string>
    <string name="helpBack">Atras</string>
    <string name="helpNext">Siguiente</string>
    <string name="whoisTest">whois</string>
    <string name="whoisQuestion1">¿Quién es más probable que atienda tu llamada a media noche?</string>
    <string name="whoisQuestion2">¿Quién es más probable que se sienta como en casa en tu casa?</string>
    <string name="whoisQuestion3">¿Quién se llevaría bien con los padres de todos?</string>
    <string name="whoisQuestion4">¿Quién es más probable que le organice una fiesta sorpresa a alguien?</string>
    <string name="whoisQuestion5">¿Quién tiene más probabilidades de ser un gran chófer profesional?</string>
    <string name="whoisQuestion6">¿Quién es más probable que haga a mano tu regalo de cumpleaños?</string>
    <string name="whoisQuestion7">¿Quién es más probable que haga sentir mejor a alguien cuando se siente triste?</string>
    <string name="whoisQuestion8">¿Quién es más probable que te haga una torta por tu cumpleaños?</string>
    <string name="whoisQuestion9">¿A quién es más probable que se le ocurra apodos para todos?</string>
    <string name="whoisQuestion10">¿Quién es más probable que responda un mensaje de inmediato?</string>
    <string name="whoisQuestion11">¿Quién es más probable que te preste su libro favorito?</string>
    <string name="whoisQuestion12">¿Quién es más probable que se olvide de devolver un libro que pidió prestado?</string>
    <string name="whoisQuestion13">¿Quién es más probable que se quede despierto toda la noche mirando su teléfono?</string>
    <string name="whoisQuestion14">¿Quién es más probable que sepa todos los chismes de la oficina?</string>
    <string name="whoisQuestion15">¿Quién tiene más probabilidades de quedarse dormido durante una reunión?</string>
    <string name="whoisQuestion16">¿Quién es más probable que guarde un secreto importante?</string>
    <string name="whoisQuestion17">¿Quién tiene más probabilidades de olvidarse un cumpleaños?</string>
    <string name="whoisQuestion18">¿Quién es más probable que gaste todo su sueldo en ropa o zapatos?</string>
    <string name="whoisQuestion19">¿Quién es más probable que deje caer su teléfono nuevo y lo rompa?</string>
    <string name="whoisQuestion20">¿Quién es más probable que olvide la bolsa de almuerzo que empacó?</string>
    <string name="whoisQuestion21">¿Quién es más probable que pierda un vuelo?</string>
    <string name="whoisQuestion22">¿Quién tiene más probabilidades de dar el mejor regalo del Amigo Invisible?</string>
    <string name="whoisQuestion23">¿Quién es más probable que tenga a su mascota en su regazo durante una reunión o llamada?</string>
    <string name="whoisQuestion24">¿Quién es más probable que se olvide de silenciar su micrófono durante una reunión?</string>
    <string name="whoisQuestion25">¿Quién es más probable que diga algo importante mientras está silenciado en una llamada?</string>
    <string name="whoisQuestion26">¿Quién tiene más probabilidades de tener 20 pestañas abiertas en su escritorio?</string>
    <string name="whoisQuestion27">¿Quién tiene más probabilidades de hacer trampa en un juego de mesa?</string>
    <string name="whoisQuestion28">¿Quién tiene más probabilidades de presionar 5 veces el botón de posponer en el despertador?</string>
    <string name="whoisQuestion29">¿Quién es más probable que duerma mientras suena la alarma?</string>
    <string name="whoisQuestion30">¿Quién es más probable que pase horas leyendo chismes de celebridades?</string>
    <string name="whoisQuestion31">¿Quién es más probable que te anime en un día difícil?</string>
    <string name="whoisQuestion32">¿Quién está más dispuesto a ayudar a resolver un problema?</string>
    <string name="whoisQuestion33">¿Quién es más probable que te haga olvidar tus problemas por un tiempo?</string>
    <string name="whoisQuestion34">¿Quién es más probable que tenga un oído disponible para escuchar?</string>
    <string name="whoisQuestion35">¿Quién tiene más probabilidades de convertirse en un gran líder en el futuro?</string>
    <string name="whoisQuestion36">¿Quién tiene más probabilidades de salvar el día cuando las cosas salen mal?</string>
    <string name="whoisQuestion37">¿Quién es más probable que diga cosas buenas de ti a tus espaldas?</string>
    <string name="whoisQuestion38">¿Quién es más probable que te inspire?</string>
    <string name="whoisQuestion39">¿Quién tiene más probabilidades de sacar lo mejor de las personas que conoce?</string>
    <string name="whoisQuestion40">¿Quién tiene más probabilidades de tener un impacto en la historia?</string>
    <string name="whoisQuestion41">¿Quién es más probable que ofrezca apoyo moral a un amigo?</string>
    <string name="whoisQuestion42">¿Quién es más probable que te dé el regalo perfecto?</string>
    <string name="whoisQuestion43">¿Quién es más probable que ayude a un extraño?</string>
    <string name="whoisQuestion44">¿Quién es más probable que realice un acto de bondad al azar?</string>
    <string name="whoisQuestion45">¿Quién tiene más probabilidades de hacer nuevos amigos en un lugar nuevo?</string>
    <string name="whoisQuestion46">¿Quién tiene más probabilidades de entrenar a otros de alguna manera?</string>
    <string name="whoisQuestion47">¿Quién es más probable que coma pizza fría?</string>
    <string name="whoisQuestion48">¿Quién es más probable que coma desayuno en la cena?</string>
    <string name="whoisQuestion49">¿Quién es más propenso a olvidarse la billetera cuando sale a comer?</string>
    <string name="whoisQuestion50">¿Quién es más probable que hable en una sala de cine durante una función?</string>
    <string name="whoisQuestion51">¿Quién es más probable que regañe a otros por hablar en una sala de cine durante una función?</string>
    <string name="whoisQuestion52">¿Quién tiene más probabilidades de completar un desafío en público que conduzca a un arresto?</string>
    <string name="whoisQuestion53">¿Quién es más probable que use todas las mantas cuando duerme?</string>
    <string name="whoisQuestion54">¿Quién es más probable que sea el planificador de viajes para las vacaciones de sus familiares o amigos?</string>
    <string name="whoisQuestion55">¿Quién tiene más probabilidades de ver un programa completo en un solo día?</string>
    <string name="whoisQuestion56">¿Quién es más probable que se olvide de comprar alimentos para la semana?</string>
    <string name="whoisQuestion57">¿Quién es más probable que se coma todo el pochoclo durante una película?</string>
    <string name="whoisQuestion58">¿Quién es más probable que grite pidiendo ayuda cuando ve una araña?</string>
    <string name="whoisQuestion59">¿Quién tiene más probabilidades de matar una araña cuando la ve?</string>
    <string name="whoisQuestion60">¿Quién es más probable que se mude a una cabaña en el bosque?</string>
    <string name="whoisQuestion61">¿Quién es más probable que haga voces distintas para los personajes cuando lee un libro en voz alta?</string>
    <string name="whoisQuestion62">¿Quién tiene más probabilidades de hacerse un tatuaje vergonzoso?</string>
    <string name="whoisQuestion63">¿Quién tiene más probabilidades de copiar en un examen?</string>
    <string name="whoisQuestion64">¿Quién tiene más probabilidades de orinarse en la ducha?</string>
    <string name="whoisQuestion65">¿Quién tiene más probabilidades de no cambiar nunca las sábanas?</string>
    <string name="whoisQuestion66">¿Quién tiene más probabilidades de llegar tarde?</string>
    <string name="whoisQuestion67">¿Quién suele faltar a clase?</string>
    <string name="whoisQuestion68">¿Quién tiene más probabilidades de contestar a un profesor?</string>
    <string name="whoisQuestion69">¿Quién tiene más probabilidades de convertirse en diseñador de interiores?</string>
    <string name="whoisQuestion70">¿Quién tiene más probabilidades de responder a un mensaje de texto tres semanas después?</string>
    <string name="whoisQuestion71">¿Quién tiene más probabilidades de vivir en el extranjero?</string>
    <string name="whoisQuestion72">¿Quién tiene más probabilidades de ser médico?</string>
    <string name="whoisQuestion73">¿Quién tiene más probabilidades de dar los mejores consejos?</string>
    <string name="whoisQuestion74">¿Quién tiene más probabilidades de crear una empresa?</string>
    <string name="whoisQuestion75">¿Quién tiene más probabilidades de hacerse vegano?</string>
    <string name="whoisQuestion76">¿Quién tiene más probabilidades de viajar al espacio?</string>
    <string name="whoisQuestion77">¿Quién tiene más probabilidades de mantener la calma durante una gran tormenta?</string>
    <string name="whoisQuestion78">¿Quién tiene más probabilidades de dejarlo todo para ayudar a un desconocido?</string>
    <string name="whoisQuestion79">¿Quién tiene más probabilidades de pintar una obra famosa?</string>
    <string name="whoisQuestion80">¿Quién tiene más probabilidades de marcharse sin despedirse?</string>
    <string name="whoisQuestion81">¿Quién es el más propenso a dejar caer su ordenador portátil?</string>
    <string name="whoisQuestion82">¿Quién tiene más probabilidades de enseñarte algo nuevo?</string>
    <string name="whoisQuestion83">¿Quién tiene más probabilidades de convertirse en profesor?</string>
    <string name="whoisQuestion84">¿Quién tiene más probabilidades de viajar por el mundo?</string>
    <string name="whoisQuestion85">¿Quién tiene más probabilidades de crear un podcast?</string>
    <string name="whoisQuestion86">¿Quién tiene más probabilidades de dar el mejor abrazo?</string>
    <string name="whoisQuestion87">¿Quién tiene más probabilidades de escribir una carta a mano?</string>
    <string name="whoisQuestion88">¿Quién tiene más probabilidades de escribir un libro?</string>
    <string name="whoisQuestion89">¿Quién tiene más probabilidades de planificar las vacaciones de todo el grupo?</string>
    <string name="whoisQuestion90">¿Quién es más propenso a empezar peleas?</string>
    <string name="whoisQuestion91">¿Quién es más probable que pida perdón primero?</string>
    <string name="whoisQuestion92">¿Quién es más probable que organice las salidas más divertidas?</string>
    <string name="whoisQuestion93">¿Quién es más probable que cuente una historia una y otra vez?</string>
    <string name="whoisQuestion94">¿Quién es el que cocina mejor del grupo?</string>
    <string name="whoisQuestion95">¿Quién tiene más probabilidades de comer del plato de otra persona?</string>
    <string name="whoisQuestion96">¿Quién se duerme más temprano?</string>
    <string name="yesterday">Ayer</string>
    <string name="today">Hoy</string>
    <string name="tomorrow">Mañana</string>
</resources>