<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="40dp">
            <!-- Title -->

            <TextView
                android:id="@+id/tvChallegeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challengeTitle"
                android:textColor="@color/textlight2"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Reto Diario" />

            <!-- Streak -->

            <androidx.cardview.widget.CardView
                android:id="@+id/cvStreakPoints"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvChallegeTitle"
                tools:cardBackgroundColor="@color/background_fireStreak">

                <TextView
                    android:id="@+id/streakPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="5dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:text="14"
                    tools:textColor="@color/text_fireStreak" />

                <ImageView
                    android:id="@+id/imgFire"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_fire"
                    tools:tint="@color/text_fireStreak" />

            </androidx.cardview.widget.CardView>

            <!-- Yesterday -->

            <TextView
                android:id="@+id/tvYesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/yesterday"
                android:textColor="@color/textlight2"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/cvStreakPoints"
                tools:ignore="MissingConstraints" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/background_yesterday"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvYesterday"
                tools:ignore="MissingConstraints" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCheckYesterday"
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/background_yesterday"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYesterday">

                <CheckBox
                    android:id="@+id/cbYesterday"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|right"
                    android:buttonTint="@color/textlight2"
                    android:layout_marginEnd="5dp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/background_yesterday"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toStartOf="@+id/cvCheckYesterday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYesterday"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tvChallengeYesterday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="esta es una pregunta de prueba bababababababbab ababababbababababbaba" />

            </androidx.cardview.widget.CardView>

            <!-- Today -->

            <TextView
                android:id="@+id/tvToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/today"
                android:textColor="@color/textlight2"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/cvCheckYesterday"
                tools:ignore="MissingConstraints" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/background_today"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvToday"
                tools:ignore="MissingConstraints" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCheckToday"
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/background_today"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvToday">

                <CheckBox
                    android:id="@+id/cbToday"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|right"
                    android:buttonTint="@color/textlight2"
                    android:layout_marginEnd="5dp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/background_today"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toStartOf="@+id/cvCheckToday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvToday"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tvChallegeToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="esta es una pregunta de prueba bababababababbab ababababbababababbaba" />

            </androidx.cardview.widget.CardView>

            <!-- Tomorrow -->

            <TextView
                android:id="@+id/tvTomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/tomorrow"
                android:textColor="@color/textlight2"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/cvCheckToday"
                tools:ignore="MissingConstraints" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/background_tomorrow"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTomorrow"
                tools:ignore="MissingConstraints" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCheckTomorrow"
                android:layout_width="60dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/background_tomorrow"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTomorrow">

                <CheckBox
                    android:id="@+id/cbTomorrow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|right"
                    android:layout_marginEnd="5dp"
                    android:enabled="false" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/background_tomorrow"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toStartOf="@+id/cvCheckTomorrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTomorrow"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tvChallengeTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="esta es una pregunta de prueba bababababababbab ababababbababababbaba" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>